package com.sakamoto.skillreport.model;

public enum NoteType {
    NOTE,
    GOAL
}
