package com.sakamoto.skillreport.model;

public enum UserRole {
    ROLE_INSTRUCTOR,
    ROLE_STUDENT
}
