@startuml
' Entities
class User {
    - String name
    - String email
    - String password
}

class Classroom {
    - String code
    - String name
}

class Reference {
    - String code
    - String name
}

class Skill {
    - String code
    - String name
    - String description
}

class StudentSkill {
    - int level
}

class Note {
    - String content
    - NoteType type
}

enum UserRole {
    ROLE_INSTRUCTOR
    ROLE_STUDENT
}

enum NoteType {
    NOTE
    GOAL
}

' Entity Relationships
User "1  " *-- "1,*" Classroom : Moderates::TEACHER

Classroom "1" -- "1,*" User : Enrolled::STUDENT
Classroom "1" -- "1,* " Reference : References

Reference "1" *-- "1,*" Skill : has

User "1" -r- "0,*" Note : "Writes   "

Note .. NoteType
UserRole .. User

User "0,*" -- "1,*" Skill
(User, Skill) .. StudentSkill

@enduml